// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render a default component 1`] = `
<div
  className="item-display"
>
  <div
    className="text"
  />
</div>
`;

exports[`should render a display with the attention textStyle on text 1`] = `
<div
  className="item-display"
>
  <div
    className="text attention"
  >
    Display
  </div>
</div>
`;

exports[`should render a display with the secondary textStyle on text 1`] = `
<div
  className="item-display"
>
  <div
    className="text secondary"
  >
    Display
  </div>
</div>
`;

exports[`should render a display with the strikeThrough textStyle on text 1`] = `
<div
  className="item-display"
>
  <div
    className="text strike-through strikeThrough"
  >
    Display
  </div>
</div>
`;

exports[`should render a truncated display 1`] = `
<div
  className="item-display"
>
  <div
    className="text is-truncated"
  >
    display1display1display1display1display1display1display1display1
  </div>
</div>
`;

exports[`should render with a graphic 1`] = `
<div
  className="item-display"
>
  <div
    className="inline-icon"
  >
    <img
      alt="Graphic"
    />
  </div>
  <div
    className="text"
  />
</div>
`;

exports[`should render with text 1`] = `
<div
  className="item-display"
>
  <div
    className="text"
  >
    Display
  </div>
</div>
`;

exports[`should render with text and graphic 1`] = `
<div
  className="item-display"
>
  <div
    className="inline-icon"
  >
    <img
      alt="Graphic"
    />
  </div>
  <div
    className="text"
  >
    Display
  </div>
</div>
`;
